# AMVergeNew

./: .gitignore  AGENTS.md  CONTRIBUTING.md  TODO.txt
.github/workflows/: mac-dev-build.yml  release-multi-platform.yml  release-windows-only.yml  release.yml
backend/: app.py  backend_script.spec
backend/deprecated/test_scripts/: report.txt  video_info.py
backend/methods/: __init__.py  hybrid_split.py  keyframe_split.py  omnishotcut_split.py  transnet_split.py  yey.txt
backend/utils/: gpu_check.py  gpu_info.py  scene_utils.py
frontend/: package-lock.json  package.json
frontend/scripts/: build-sidecar.mjs  merge-universal-macos-app.mjs
frontend/src/: App.tsx  MainLayout.tsx  main.tsx  theme.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.macos.intel.conf.json
frontend/src-tauri/src/: main.rs
frontend/src-tauri/src/commands/: bug_report.rs  cache.rs  export.rs  mod.rs  notifications.rs  preview.rs  scenes.rs  settings.rs
frontend/src-tauri/src/commands/export/: compat.rs  encode.rs  merge.rs  multi.rs  ops.rs  probe.rs  runner.rs  types.rs
frontend/src/components/: BgProgressBar.tsx  ImportButtons.tsx  StartupNotificationModal.tsx
frontend/src/data/: CHANGELOG.md
frontend/src/hooks/: useDiscordRPC.ts  useDragDropImport.ts  useEpisodePanelState.ts  useImportExport.ts  useStartupUpdateNotification.ts  useTimeline.ts
frontend/src/pages/: EditorPage.tsx  HomePage.tsx  Menu.tsx  Settings.tsx
frontend/src/settings/: generalSettings.ts
frontend/src/stores/: appStore.ts  episodeStore.ts  settingsStore.ts
(+44 files in other folders)
